<resources>
    <string name="app_name">ROS Android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="product_single_noallergens">No Allergens saved for this product.</string>
    <string name="product_single_button_addToOrder">Add to order</string>
    <string name="productcategories_textView_waiterName">You are creating an order as: %s</string>
    <string name="productcategories_textView_table">Creating an order for table: %s</string>

    <string name="waiterhome_textView_waiterName">You are using this device as: %s</string>
    <string name="waiterhome_textView_createNewOrder">Create a new order</string>
    <string name="content_product_textView_allergenTitle">List of Allergens</string>
    <string name="please_select_your_name_from_the_list">Please select your name from the list</string>
    <string name="dialog_order_edit_title">Edit Items in Order</string>
    <string name="dialog_order_doneEditing">Done Editing</string>
    <string name="language_choose_subtitle">The language you choose here only affects the items that are stored in the ROS server</string>
    <string name="language_choose_title">Choose a language</string>
    <string name="home_title">Welcome to Restaurant Ordering System for Android</string>
    <string name="home_isconnected">Is connected to: %s</string>
    <string name="home_notconnected">Is not connected. (Last try: %s)</string>
    <string name="home_language_changed_toast">Changed language to %s</string>
    <string name="home_dialog_hint">IP or Hostname</string>
    <string name="home_dialog_title">Enter the IP address or hostname of the server</string>
    <string name="preference_file_key">lu.btsi.bragi.ros.preferences</string>
    <string name="order_sent">Order has been sent to server</string>
    <string name="dialog_exit_title">Are you sure you want to exit?</string>
    <string name="dialog_exit_no">Go Back</string>
    <string name="dialog_exit_yes">Exit</string>
    <string name="order_card_button_processing">Mark as processing</string>
    <string name="order_card_button_processingdone">Mark processing Done</string>
    <string name="order_card_time">Time created: %s</string>
    <string name="order_card_waiter">Waiter: %s</string>
    <string name="order_card_title">Order: %s</string>
    <string name="order_card_isprocessing">Processing</string>
    <string name="order_card_isprocessingdone">Processing Done</string>
    <string name="sidebar_home">Home</string>
    <string name="sidebar_cat_waiter">Waiter</string>
    <string name="sidebar_waitermode">Waiter Mode</string>
    <string name="sidebar_changewaiter">Change Waiter</string>
    <string name="sidebar_cat_order">Order Display</string>
    <string name="sidebar_vieworders">View Orders</string>
    <string name="sidebar_cat_settings">Settings</string>
    <string name="sidebar_language">Change language</string>
    <string name="order_location_title">Select the location of this tablet</string>
    <string name="order_location_subtitle">This is used for filtering which products are shown from the orders.  For example, drinks which are in the \'bar\' category shouldn\'t be shown in the kitchen tablet</string>
    <string name="actionbar_language_choose">Language Chooser</string>
    <string name="actionbar_orders">Viewing Orders for: %s</string>
    <string name="actionbar_location_choose">Choose a location</string>
    <string name="actionbar_waiter_choose">Change Waiter</string>
    <string name="actionbar_waiter_home">Create an Order</string>
    <string name="actionbar_productcategories_select">Select Category to add</string>
    <string name="actionbar_product_select">Add a Product to Order</string>
    <string name="order_location_toast_updated">Location changed to: %s</string>
    <string name="order_card_orderreceived">Order Received</string>
    <string name="order_review_button_send">Send Order</string>
    <string name="dialog_order_review_title">Review items before confirm</string>
    <string name="dialog_order_review_cancel">Don\'t send</string>
    <string name="order_textView_location">Current Location: %s</string>
    <string name="order_card_table">Table: %s</string>
</resources>
